--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "memobook",
   "version": "1.0.0",
   "description": "A simple note-taking app written with Electron",
-  "main": ".webpack/main",
+  "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -11,45 +11,12 @@
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/slowtacocar/memobook.git"
-  },
+  "keywords": [],
   "author": {
-    "name": "slowtacocar",
-    "email": "13561297+slowtacocar@users.noreply.github.com"
+    "name": "Bobby",
+    "email": "slowtacocar@gmail.com"
   },
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/slowtacocar/memobook/issues"
-  },
-  "homepage": "https://github.com/slowtacocar/memobook#readme",
-  "browserslist": [
-    "Electron 9.1.0"
-  ],
-  "stylelint": {
-    "extends": [
-      "stylelint-config-twbs-bootstrap/scss"
-    ],
-    "rules": {
-      "property-blacklist": [
-        "border-radius",
-        "border-top-left-radius",
-        "border-top-right-radius",
-        "border-bottom-right-radius",
-        "border-bottom-left-radius",
-        "transition"
-      ],
-      "function-blacklist": [
-        "calc"
-      ]
-    }
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
-  },
   "config": {
     "forge": {
       "packagerConfig": {},
@@ -61,7 +28,10 @@
           }
         },
         {
-          "name": "@electron-forge/maker-dmg"
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
         },
         {
           "name": "@electron-forge/maker-deb",
@@ -71,58 +41,18 @@
           "name": "@electron-forge/maker-rpm",
           "config": {}
         }
-      ],
-      "plugins": [
-        [
-          "@electron-forge/plugin-webpack",
-          {
-            "mainConfig": "./webpack.main.config.js",
-            "renderer": {
-              "config": "./webpack.renderer.config.js",
-              "entryPoints": [
-                {
-                  "html": "./src/index.html",
-                  "js": "./src/renderer.js",
-                  "name": "main_window"
-                }
-              ]
-            }
-          }
-        ]
       ]
     }
   },
-  "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@electron-forge/cli": "^6.0.0-beta.52",
-    "@electron-forge/maker-deb": "^6.0.0-beta.52",
-    "@electron-forge/maker-dmg": "^6.0.0-beta.52",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.52",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.52",
-    "@electron-forge/plugin-webpack": "^6.0.0-beta.52",
-    "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
-    "autoprefixer": "^9.8.5",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^3.6.0",
-    "electron": "9.1.0",
-    "eslint": "^7.4.0",
-    "eslint-loader": "^4.0.2",
-    "node-loader": "^0.6.0",
-    "postcss-loader": "^3.0.0",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.2",
-    "style-loader": "^0.23.1",
-    "stylelint": "^13.6.1",
-    "stylelint-config-twbs-bootstrap": "^2.0.3",
-    "stylelint-webpack-plugin": "^2.1.0"
-  },
   "dependencies": {
-    "bootstrap": "^4.5.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "firebase": "^7.16.0",
-    "firebaseui": "^4.5.2",
-    "jquery": "^3.5.1"
+    "electron-squirrel-startup": "^1.0.0"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.54",
+    "@electron-forge/maker-deb": "^6.0.0-beta.54",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
+    "@electron-forge/maker-zip": "^6.0.0-beta.54",
+    "electron": "11.2.3"
   }
 }
