--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
           }
         },
         {
-          "name": "@electron-forge/maker-dmg",
+          "name": "@electron-forge/maker-dmg"
         },
         {
           "name": "@electron-forge/maker-deb",
