--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "memobook",
   "productName": "memobook",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A simple note-taking app written with Electron",
-  "main": "src/index.js",
+  "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -41,18 +41,58 @@
           "name": "@electron-forge/maker-rpm",
           "config": {}
         }
+      ],
+      "plugins": [
+        [
+          "@electron-forge/plugin-webpack",
+          {
+            "mainConfig": "./webpack.main.config.js",
+            "renderer": {
+              "config": "./webpack.renderer.config.js",
+              "entryPoints": [
+                {
+                  "html": "./src/index.html",
+                  "js": "./src/renderer.js",
+                  "name": "main_window"
+                }
+              ]
+            }
+          }
+        ]
       ]
     }
   },
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
-  },
   "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
     "@electron-forge/cli": "^6.0.0-beta.54",
     "@electron-forge/maker-deb": "^6.0.0-beta.54",
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "11.2.3"
+    "@electron-forge/plugin-webpack": "^6.0.0-beta.54",
+    "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "autoprefixer": "^10.2.4",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^4.3.0",
+    "electron": "11.2.3",
+    "node-loader": "^1.0.2",
+    "postcss-loader": "^4.2.0",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^1.3.0"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.6.0",
+    "babel-eslint": "^10.1.0",
+    "bootstrap": "^5.0.0-beta1",
+    "electron-squirrel-startup": "^1.0.0",
+    "eslint": "^7.19.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "firebase": "^8.2.6",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-firebaseui": "^4.1.0",
+    "sass": "^1.32.6"
   }
 }
