--- a/package.json
+++ b/package.json
@@ -79,20 +79,21 @@
     "node-loader": "^1.0.2",
     "postcss-loader": "^4.2.0",
     "sass-loader": "^10.1.1",
-    "style-loader": "^1.3.0"
+    "style-loader": "^1.3.0",
+    "sass": "^1.32.6"
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
     "babel-eslint": "^10.1.0",
-    "bootstrap": "^5.0.0-beta1",
+    "bootstrap": "^4.6.0",
     "electron-squirrel-startup": "^1.0.0",
     "eslint": "^7.19.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "firebase": "^8.2.6",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
-    "react-firebaseui": "^4.1.0",
-    "sass": "^1.32.6"
+    "react-firebaseui": "^4.1.0"
   }
 }
