--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "eslint --ext .js ."
   },
   "keywords": [],
   "author": {
@@ -73,23 +73,27 @@
     "@electron-forge/plugin-webpack": "^6.0.0-beta.54",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "autoprefixer": "^10.2.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^4.3.0",
     "electron": "11.2.3",
+    "eslint": "^7.6.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "node-loader": "^1.0.2",
     "postcss-loader": "^4.2.0",
+    "sass": "^1.32.6",
     "sass-loader": "^10.1.1",
-    "style-loader": "^1.3.0",
-    "sass": "^1.32.6"
+    "style-loader": "^1.3.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
-    "babel-eslint": "^10.1.0",
     "bootstrap": "^4.6.0",
     "electron-squirrel-startup": "^1.0.0",
-    "eslint": "^7.19.0",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "firebase": "^8.2.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
